# fltdptch

./: .gitignore  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_userprofile_gender_alter_userprofile_phone_1.py
flights/: apps.py  urls.py
flights/migrations/: 0001_initial.py  0002_rename_aircraft_reg_flight_aircraft.py  0003_flight_assigned_to_alter_flight_dispatched_by.py  0004_remove_flight_supervisor_closed_flight_status.py  0005_alter_reconfirmation_date_for.py  0006_booking.py  0007_booking_date.py
flights/models/: Aircraft.py  Booking.py  Flight.py  Reconfirmation.py  __init__.py
fltdptch/: appsConfig.py  asgi.py  settings.py  wsgi.py
fltdptch/assets/static/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/: urls.py
frontend/views/: aircrafts.py  analytics.py  bookings.py  flights.py  landing.py  planning.py  users.py
templates/: 403.html  404.html  500.html
templates/cotton/badge/: index.html
templates/cotton/button/: index.html
templates/cotton/card/: index.html
templates/cotton/combobox/: index.html
templates/cotton/dialog/: content.html
templates/cotton/form/: label.html
templates/registration/: logged_out.html  login.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_email_activation.html  password_reset_email_message.html  password_reset_email_trigger.html  password_reset_form.html
(+22 files in other folders)
