[project]
name = "fltdptch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django-cleanup>=9.0.0",
    "django-cotton>=2.5.0",
    "django-htmx>=1.27.0",
    "django-template-partials>=25.3",
    "djangosetupheist>=0.6.2",
    "fpdf2>=2.8.5",
    "pillow>=12.0.0",
    "whitenoise>=6.11.0",
]
